--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,13 @@
 
   "name": "LobThis",
   "description": "This extension finds a sequence of pages in the Library of Babel with the text from the website you're currently on.",
-  "version": "0.0.1",
+  "version": "0.0.2",
+    "icons": {"16": "icon.png",
+            "32": "icon32.png",
+            "48": "icon48.png",
+            "128": "icon128.png"
+},
+
 
   "browser_action": {
     "default_icon": "icon.png"
