--- a/LobThis/manifest.json
+++ b/LobThis/manifest.json
@@ -3,16 +3,16 @@
 
   "name": "LobThis",
   "description": "This extension finds a sequence of pages in the Library of Babel with the text from the website you're currently on.",
-  "version": "0.0.2",
-    "icons": {"16": "icon.png",
-            "32": "icon32.png",
-            "48": "icon48.png",
-            "128": "icon128.png"
+  "version": "0.0.3",
+    "icons": {"16": "images/icon.png",
+            "32": "images/icon32.png",
+            "48": "images/icon48.png",
+            "128": "images/icon128.png"
 },
 
 
   "browser_action": {
-    "default_icon": "icon.png"
+    "default_icon": "images/icon.png"
   },
   
   "permissions": [
